# super-rag

./: .gitignore  Makefile  README.md  pyproject.toml  start.sh  strart.sh
config/: ray_schedule.py  ray_tasks.py
demo/: demo.py
deploy/: docker-compose.yaml
docs/design/: ag-ui-integration.md  hermes-inspired-improvements.md
nodeflow_registry/: README.md  index.json
nodeflow_registry/pack_template/: README.md  pyproject.toml
nodeflow_registry/pack_template/src/super_rag_nodes_example/: __init__.py  nodes.py
scripts/: init-db.sh  init-offonline-db-sql.sh  uvicorn-log-config-dev.yaml  uvicorn-log-config-prod.yaml
super_rag/: app.py  config.py  exceptions.py
super_rag/ag_ui/: __init__.py  adapter.py  request.py
super_rag/agent/: __init__.py  agent_config.py  agent_event_listener.py  agent_event_processor.py  agent_history_manager.py  agent_memory_manager.py  agent_message_queue.py  agent_session_manager.py  agent_session_manager_lifecycle.py  error_message_formatter.py  exceptions.py  i18n.py  mcp_app_factory.py  openai_llm_tool_events.py  response_types.py  stream_formatters.py  tool_call_context.py  tool_reference_extractor.py  tool_use_message_formatters.py
super_rag/agent_pro/: llm_agent.py
super_rag/api/: agent.py  audit.py  auth.py  bot.py  chat.py  collections.py  flow.py  llm.py  marketplace.py  marketplace_collections.py  nodeflow.py  user.py  web.py  workflow.py
super_rag/chunk/: chunking.py
super_rag/context/: context.py
super_rag/db/: models.py  ops.py
super_rag/fileparser/: base.py  docling_parser.py  file_parser.py  mineru_common.py  mineru_parser.py  parse_md.py  utils.py
super_rag/graphiti/: graphiti_manager.py
super_rag/history/: __init__.py  message.py
super_rag/index/: base.py  document_parser.py  graph_index.py  manager.py  summary_index.py  vector_and_full_text_index.py  vision_index.py
super_rag/llm/: __init__.py  litellm_cache.py  litellm_logging.py  litellm_track.py  prompts.py
whl/: auto_coder-1.1.0-py3-none-any.whl
(+260 files in other folders)
