[project]
name = "super-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aioboto3>=15.1.0",
    "alembic>=1.16.5",
    "asgiref>=3.9.2",
    "asyncpg>=0.30.0",
    "doclayout-yolo>=0.0.4",
    "docling>=2.54.0",
    "fastapi>=0.115.12",
    "fastapi-users[sqlalchemy,oauth]>=14.0.1",
    "ftfy>=6.3.1",
    "jose>=1.0.0",
    "linkify-it-py>=2.0.3",
    "litellm[caching]>=1.80.11",
    "loguru>=0.7.3",
    "mineru>=2.5.4",
    "omegaconf>=2.3.0",
    "passlib>=1.7.4",
    "pikepdf>=9.11.0",
    "pycryptodome>=3.23.0",
    "sqlalchemy>=2.0.45",
    "tiktoken>=0.11.0",
    "torch",
    "ultralytics>=8.3.203",
    "psycopg2-binary<3.0.0,>=2.9.6",
    "py7zr<1.0.0,>=0.20.8",
    "rarfile<5.0,>=4.1",
    "autocoder-rag-sdk>=0.0.2",
    "pyseekdb>=1.0.0b5",
    "ray>=2.52.1",
    "aiomysql>=0.3.2",
    "typing-extensions>=4.15.0",
    "uvicorn>=0.40.0",
    "ms-agent>=1.5.2",
    "ms-enclave[docker]>=0.0.4",
    "anthropic>=0.75.0",
    "langchain<1.0.0,>=0.3.23",
    "mcp-agent>=0.2.6",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp>=1.20.0",
    "opentelemetry-exporter-jaeger>=1.20.0",
    "opentelemetry-instrumentation-fastapi>=0.41b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.41b0",
    "pytest>=9.0.2",
]

[tool.setuptools]
packages = ["super_rag","config"]

[[tool.uv.index]]
url = "https://repo.huaweicloud.com/repository/pypi/simple"
default = true
